--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,17 +9,16 @@ license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "matplotlib==3.7.2",
-    "moviepy==2.1.2",
-    "numpy==2.2.4",
-    "opencv-contrib-python==4.11.0.86",
-    "opencv-python==4.11.0.86",
-    "Pillow==11.1.0",
-    "pyinstaller==6.12.0",
-    "scipy==1.15.2",
-    "torch==2.6.0+cu124",
-    "torchvision==0.21.0+cu124",
-    "tqdm==4.67.1",
+    "matplotlib>=3.7.0",
+    "moviepy>=2.1.0",
+    "numpy>=1.24.0",
+    "opencv-contrib-python>=4.11.0.86",
+    "opencv-python>=4.11.0.86",
+    "Pillow>=9.2.0,<11.0.0",
+    "scipy==1.11.0",
+    "torch>=2.6,<2.7",
+    "torchvision>=0.21,<0.22",
+    "tqdm>=4.65.0",
 ]
 
 [project.urls]
