--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "opencv-contrib-python>=4.11.0.86",
     "opencv-python>=4.11.0.86",
     "Pillow>=9.2.0,<11.0.0",
-    "scipy==1.11.0",
+    "scipy>=1.11.0",
     "torch>=2.6,<2.7",
     "torchvision>=0.21,<0.22",
 ]
