Fixing dev dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["kornia>=0.8.0", "tqdm>=4.65.0"]
+dev = ["kornia>=0.8.0", "tqdm>=4.65.0", "tensorboard>=2.19.0", "ipykernel>=6.29.0"]
 
 [project.urls]
 Homepage = "https://github.com/ljubobratovicrelja/aegear"
