--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dev = [
     "tqdm>=4.65.0",
     "tensorboard>=2.19.0",
     "ipykernel>=6.29.0",
-    "requests>=2.32.0"
+    "gdown>=5.0.0",
 ]
 
 [project.urls]
