--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
     "tensorboard>=2.19.0",
     "ipykernel>=6.29.0",
     "gdown>=5.0.0",
+    "ipywidgets>=8.0.0",
 ]
 
 [project.urls]
@@ -36,3 +37,6 @@ Repository = "https://github.com/ljubobratovicrelja/aegear"
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[project.scripts]
+aegear-gui = "aegear.app:main"
