--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aegear"
-version = "0.1.0"
+version = "0.2.0"
 description = "Computer vision toolkit for fish tracking and behavioral analysis in aquaculture research environments."
 authors = [
     { name = "Relja Ljubobratovic", email = "ljubobratovic.relja@gmail.com" },
@@ -27,7 +27,7 @@ dev = [
     "ipykernel>=6.29.0",
     "gdown>=5.0.0",
     "ipywidgets>=8.0.0",
-    "scikit-learn>=1.6.0"
+    "scikit-learn>=1.6.0",
 ]
 
 [project.urls]
